using a better gc